css/style.css
:root {
  --main-color: rgb(230, 230, 230);
  --button-color: rgb(210, 210, 210);
  --button-hover-color: rgb(200, 200, 200);
  --button-active-color: rgb(200, 200, 200);
  --button-box-shadow-color: rgb(150, 150, 150);
}

.disabled {
  opacity: 0;
  visibility: hidden;
  pointer-events: none;
  transition: all 1000ms;
}

.hidden {
  display: none;
}

.locked {
  pointer-events: none;
}

.anim-show {
  animation-name: show-element;
  animation-duration: 2500ms;
}

.anim-show-short {
  animation-name: show-element;
  animation-duration: 1250ms;
}

@keyframes show-element {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

.anim-hide-short {
  animation-name: hide-element;
  animation-duration: 1250ms;
}

@keyframes hide-element {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

* {
  box-sizing: border-box;
  font-family: 'Berkshire Swash', cursive;
  font-size: 18px;
  font-style: italic;
  color: rgb(101, 101, 101);
}

.body {
  background-color: var(main-color);
}

.wrapper {
  text-align: center;
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
}

.header,
.footer {
  padding: 15px 0px;
}

.header__content {
  font-size: 20px;
}

.main {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.footer__content {
  font-size: 12px;
}

.start-page {
  margin: 10 auto;
}

.start-page__title {
  margin: 10px auto;
}

.start-page__title-text {
  font-size: 2rem;
}

.start-page__navbar {
  width: 80vw;
  margin: 10px auto;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
}

.start-page__navbar input[type='radio'] {
  opacity: 0;
  position: fixed;
  width: 0;
}

.start-page__navbar label {
  display: block;
  width: 50px;
  height: 50px;
  margin: 6px;
  display: flex;
  justify-content: center;
  align-items: center;
  background: var(--button-color);
  border-radius: 5px;
}

.start-page__navbar-label-content {
  display: block;
  font-size: 1.2em;
}

.start-page__navbar label:hover {
  background: var(--button-hover-color);
  box-shadow: 1px 1px 4px var(--button-box-shadow-color);
  cursor: pointer;
  font-size: 1.2em;
}

.start-page__navbar input[type='radio']:focus + label {
  background: rgb(190, 190, 190);
  border: 1px solid rgb(37, 37, 132);
  font-size: 1.2em;
}

.start-page__navbar input[type='radio']:checked + label {
  background-color: rgb(171, 197, 178);
  border: 1px solid rgb(180, 180, 180);
  font-size: 1.2em;
}

.button {
  width: 10rem;
  height: 4rem;
  background: var(--button-color);
  border-radius: 10px;
  border: 1px solid rgb(180, 180, 180);
  margin: 5px;
}

.button-disabled {
  pointer-events: none;
  background: rgb(240, 240, 240);
  box-shadow: 1px 1px 4px rgb(225, 225, 225);
  border: 1px solid rgb(230, 230, 230);
  color: rgb(180, 180, 180);
}

.button:hover {
  background: var(--button-hover-color);
  box-shadow: 1px 1px 4px var(--button-box-shadow-color);
  cursor: pointer;
  font-size: 1.2em;
}

.button-active {
  width: calc(10rem * 1.1);
  height: calc(4rem * 1.1);
  background: var(--button-active-color);
  box-shadow: 1px 1px 4px var(--button-box-shadow-color);
  color: rgb(123, 172, 124);
  opacity: 50%;
  font-size: 1.2em;
}

.playing-field-grid {
  display: grid;
  gap: 10px;
  perspective: 1000px;
}

.card {
  position: relative;
  background: var(--button-color);
  border-radius: 10px;
  transform: scale(1);
  -webkit-transition: -webkit-transform 600ms;
  -webkit-transition: transform 600ms;
  transition: transform 600ms;
  transform-style: preserve-3d;
  cursor: pointer;
}

.card:active {
  -webkit-transform: scale(0.96);
  transform: scale(0.96);
  -webkit-transition: -webkit-transform 200ms;
  -webkit-transition: transform 200ms;
  transition: transform 200ms;
}

.card.flip {
  -webkit-transform: rotateY(180deg);
  transform: rotateY(180deg);
  -webkit-transition: -webkit-transform 500ms;
  -webkit-transition: transform 500ms;
  transition: transform 500ms;
}

.card__back-face {
  background: url('../images/fruits-card-back.svg');
  background-repeat: no-repeat;
  background-size: 90% 90%;
  opacity: 0.6;
  background-position: 50% 50%;
  border-radius: 10px;
  -webkit-transform: rotateY(0deg);
  transform: rotateY(0deg);
}

.card__back-face:hover {
  opacity: 0.8;
  border: 1px solid rgb(186, 186, 186);
  box-shadow: 2px 2px 6px var(--button-box-shadow-color);
}

.card__front-face,
.card__back-face {
  position: absolute;
  width: 100%;
  height: 100%;
  padding: 15%;
  top: 0;
  left: 0;
  backface-visibility: hidden;
}

.card__front-face {
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 2;
  -webkit-transform: rotateY(180deg);
  transform: rotateY(180deg);
  opacity: 80%;
}

.results-container {
  width: 60vw;
  height: 60vh;
  background: rgba(216, 216, 216, 0.6);
  border-radius: 10px;
  border: 1px solid rgb(180, 180, 180);
  box-shadow: 1px 1px 4px var(--button-box-shadow-color);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
.results-win-text {
  font-size: 2rem;
  padding: 10px;
  text-align: center;
}
.btn-container {
  margin-top: 10vh;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
}

